tests/force_recheck_focus/force_recheck_focus.exp
===== force-recheck of a unchanged file does nothing: =====
No errors!

The Flow server is currently in lazy mode and is only checking 0/2 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

===== force-recheck --focus of a unchanged file does a recheck: =====
Error -------------------------------------------------------------------------------------------------------- a.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:3:17
   3| var x: string = 123;
                      ^^^ [1]

References:
   a.js:3:8
   3| var x: string = 123;
             ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- b.js:8:1

Cannot cast `y` to undefined because string [1] is incompatible with undefined [2]. [incompatible-type]

   b.js:8:1
   8| y as void; // error
      ^

References:
   a.js:5:18
   5| export const y = "y";
                       ^^^ [1]
   b.js:8:6
   8| y as void; // error
           ^^^^ [2]



Found 2 errors

The Flow server is currently in lazy mode and is only checking 2/2 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes
